refactor: add rollback for photo upload and improve request mapping